triviagame/force-app/main/default/objects/Trivia_Participant_Question__c/Trivia_Participant_Question__c.object-meta.xml
<CustomObject>
    <description>Salesforce Trivia Multiplayer Game: Junction object between trivia game participant and trivia game question</description>
    <label>Trivia Participant Question</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trivia Participant Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>