triviagame/force-app/main/default/objects/Trivia_Participant_Question__c/fields/Answer_Chosen__c.field-meta.xml
<CustomField>
    <fullName>Answer_Chosen__c</fullName>
    <description>Salesforce Trivia Multiplayer Game: answer chosen by the candidate if answered at all</description>
    <inlineHelpText>answer chosen by the candidate if answered at all</inlineHelpText>
    <label>Answer Chosen</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>