triviagame/force-app/main/default/objects/Trivia_Participant_Question__c/fields/Did_Answer__c.field-meta.xml
<CustomField>
    <fullName>Did_Answer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Salesforce Trivia Multiplayer Game: indicates if the question was answered by the candidate or not</description>
    <inlineHelpText>indicates if the question was answered by the candidate or not</inlineHelpText>
    <label>Did Answer?</label>
    <type>Checkbox</type>
</CustomField>