triviagame/force-app/main/default/objects/Trivia_Participant_Question__c/fields/Time_to_Answer__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Answer__c</fullName>
    <description>Salesforce Trivia Multiplayer Game: time taken to answer the question in milliseconds</description>
    <inlineHelpText>time taken to answer the question in milliseconds</inlineHelpText>
    <label>Time to Answer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>