triviagame/force-app/main/default/objects/Trivia_Participant_Question__c/fields/Trivia_Game_Participant__c.field-meta.xml
<CustomField>
    <fullName>Trivia_Game_Participant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Salesforce Trivia Multiplayer Game: lookup to Trivia Game Participant</description>
    <inlineHelpText>lookup to Trivia Game Participant</inlineHelpText>
    <label>Trivia Game Participant</label>
    <referenceTo>Trivia_Game_Participant__c</referenceTo>
    <relationshipLabel>Trivia Participant Questions</relationshipLabel>
    <relationshipName>Trivia_Participant_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>