triviagame/force-app/main/default/objects/Trivia_Participant_Question__c/fields/Trivia_Game_Question__c.field-meta.xml
<CustomField>
    <fullName>Trivia_Game_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>lookup to Trivia Game Participant: lookup to trivia game question</description>
    <inlineHelpText>lookup to trivia game question</inlineHelpText>
    <label>Trivia Game Question</label>
    <referenceTo>Trivia_Game_Question__c</referenceTo>
    <relationshipLabel>Trivia Participant Questions</relationshipLabel>
    <relationshipName>Trivia_Participant_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>